# monitoring-bod-tangerang

./: .env.example  .gitignore  .replit  Dockerfile  README.md  convert_db.py  dev.sh  init_db.py  init_db.sql  pnpm-lock.yaml  pyproject.toml  requirement.txt  requirements.txt  sigmon.db
.agents/memory/: MEMORY.md  excel-parsing.md  theme-system.md
.github/workflows/: deploy-hf.yml
Web-Django-Fast/: .replit  database_backup.sql  pnpm-lock.yaml  replit.md  requirement.txt
Web-Django-Fast/.agents/memory/: fastapi-jwt.md
Web-Django-Fast/.github/workflows/: main.yml
Web-Django-Fast/artifacts/api-server/: main.py  start.sh
Web-Django-Fast/artifacts/api-server/.replit-artifact/: artifact.toml
Web-Django-Fast/artifacts/api-server/app/: schemas.py
Web-Django-Fast/artifacts/api-server/services/: excel_service.py
Web-Django-Fast/artifacts/sigmon/: .env.production  package.json  vite.config.ts
Web-Django-Fast/artifacts/sigmon/src/: App.tsx
artifacts/api-server/: main.py  requirements.txt
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/app/: auth.py  database.py  models.py  schemas.py
artifacts/api-server/app/routers/: __init__.py  auth_router.py  config_router.py  dashboard_router.py  import_router.py  units_router.py
artifacts/api-server/services/: excel_service.py  sheets_service.py
artifacts/api-server/tests/: test_health.py
artifacts/sigmon/: index.html  package.json  vite.config.ts
artifacts/sigmon/.replit-artifact/: artifact.toml
artifacts/sigmon/src/: App.tsx  index.css
scripts/: post-merge.sh
(+27 files in other folders)
